added functionality to retrieve token via bearer header; updated README.md re-generated swagger files
