# src/controllers/token_controller.go
@@ -4,11 +4,13 @@ import (
 	"context"
 	"errors"
 	"net/http"
+	"strings"
 	"time"
 
-	"github.com/SerhiiKhyzhko/bookstore_oauth-api/src/domain/token"
-	"github.com/SerhiiKhyzhko/bookstore_oauth-api/src/oauth_errors"
-	tokenservice "github.com/SerhiiKhyzhko/bookstore_oauth-api/src/services/token_service"
+	"github.com/SerhiiKhyzhko/bookstore_oauth-api/v2/src/domain/token"
+	"github.com/SerhiiKhyzhko/bookstore_oauth-api/v2/src/oauth_errors"
+	tokenservice "github.com/SerhiiKhyzhko/bookstore_oauth-api/v2/src/services/token_service"
+	"github.com/SerhiiKhyzhko/bookstore_utils-go/logger"
 	"github.com/SerhiiKhyzhko/bookstore_utils-go/rest_errors"
 	"github.com/gin-gonic/gin"
 )
@@ -16,12 +18,14 @@ import (
 type TokenHandler struct {
 	service    tokenservice.Service
 	ctxTimeout time.Duration
+	logger     *logger.Logger
 }
 
-func NewHandler(service tokenservice.Service, timeout time.Duration) *TokenHandler {
+func NewHandler(service tokenservice.Service, timeout time.Duration, logger *logger.Logger) *TokenHandler {
 	return &TokenHandler{
 		service:    service,
 		ctxTimeout: timeout,
+		logger:     logger,
 	}
 }
 
@@ -107,15 +111,15 @@ func (handler *TokenHandler) RefreshToken(c *gin.Context) {
 // @Accept      json
 // @Produce     json
 // @Param       request body token.VerifyRequest true "Verify Request"
-// @Success     200 {object} jwtutil.TokenClaims
+// @Success     200 {object} token.TokenClaimsResponse
 // @Failure     400 {object} oauth_errors.SwaggerRestErr
 // @Failure     401 {object} oauth_errors.SwaggerRestErr
 // @Failure     500 {object} oauth_errors.SwaggerRestErr
 // @Router      /oauth/verify [post]
 func (handler *TokenHandler) VerifyToken(c *gin.Context) {
-	var token token.VerifyRequest
-	if err := c.ShouldBindJSON(&token); err != nil {
-		restErr := rest_errors.NewBadRequestError("invalid json body")
+	token, err := handler.retrieveToken(c)
+	if err != nil {
+		restErr := rest_errors.NewBadRequestError("missing or invalid token in Authorization header or request body")
 		c.JSON(restErr.Status(), restErr)
 		return
 	}
@@ -128,4 +132,26 @@ func (handler *TokenHandler) VerifyToken(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, claims)
+}
+
+func (handler *TokenHandler) retrieveToken(c *gin.Context) (*token.VerifyRequest, error) {
+	var errTokenMissing = errors.New("token missing")
+	var t token.VerifyRequest
+	tokenString := c.GetHeader("Authorization")
+	tokenString = strings.TrimPrefix(tokenString, "Bearer")
+	tokenString = strings.TrimSpace(tokenString)
+	if tokenString == "" {
+		if err := c.ShouldBindJSON(&t); err != nil {
+			handler.logger.Error("error binding json body", err)
+			return nil, errTokenMissing
+		}
+		if t.Token == "" {
+			handler.logger.Error("token is required in request body", errTokenMissing)
+			return nil, errTokenMissing
+		}
+		return &t, nil
+	}
+
+	t.Token = tokenString
+	return &t, nil
 }
